--- a/busybox-full.config
+++ b/busybox-full.config
@@ -61,7 +61,7 @@ CONFIG_FEATURE_HAVE_RPC=y
 # CONFIG_BUILD_LIBBUSYBOX is not set
 # CONFIG_FEATURE_INDIVIDUAL is not set
 # CONFIG_FEATURE_SHARED_BUSYBOX is not set
-# CONFIG_LFS is not set
+CONFIG_LFS=y
 CONFIG_SYSROOT=""
 CONFIG_EXTRA_CFLAGS="-Os -fno-short-enums -fgcse-after-reload -frerun-cse-after-loop -frename-registers"
 CONFIG_EXTRA_LDFLAGS=""
